--- a/styles/contato.css
+++ b/styles/contato.css
@@ -46,7 +46,7 @@ nav{
 #logo-2-neon{
     display: block;
     max-width:6rem;
-    height: 100%;
+    max-height: 100%;
     margin: auto;
 }
     @media screen and (max-width:600px){
