--- a/styles/senha.css
+++ b/styles/senha.css
@@ -114,7 +114,7 @@ h2{
 #logo-2-neon{
     display: block;
     max-width:6rem;
-    height: 100%;
+    max-height: 100%;
     margin: auto;
 }
     @media screen and (max-width:600px){
